added citation for deepwater article

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -1,6 +1,7 @@
 % Packages & Document Configurations
 \documentclass{report_template}
 \usepackage{dirtree}
+
 % Authors & Supervisor
 \firstauthor{Andreas Carelius Brustad}
 
@@ -41,7 +42,7 @@
 Computer simulations are widely used in science and engineering to model complex systems and phenomena. 
 They allow researchers to analyze and predict the behavior of systems under various conditions,
 providing insights that may be difficult or impossible to obtain through traditional experimental methods.
-The problem given of an oil spill has a real world implementation and are of significant for environmental concern. There are multiple examples like the Deepwater Horizon oil spill in 2010, where computational simulations was crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
+The problem given of an oil spill has a real world implementation and are of significant for environmental concern. There are multiple examples like the Deepwater Horizon oil spill in 2010 \cite{DeepwaterHorizon}, where computational simulations was crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
 \\
 \begin{figure}[H]
 \centering
