--- a/Report/Bibliography/Bibliography.bib
+++ b/Report/Bibliography/Bibliography.bib
@@ -1,16 +1,10 @@
-@article{khodak2021initialization,
-  title={Initialization and regularization of factorized neural layers},
-  author={Khodak, Mikhail and Tenenholtz, Neil and Mackey, Lester and Fusi, Nicolo},
-  journal={arXiv preprint arXiv:2105.01029},
-  year={2021}
-}
-
-@article{vaswani2017attention,
-  title={Attention is all you need},
-  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
-  journal={Advances in neural information processing systems},
-  volume={30},
-  year={2017}
+@article{DeepwaterHorizon,
+  title = {Simulation of the Landfall of the Deepwater Horizon Oil on the Shorelines of the Gulf of Mexico},
+  author = {Boufadel, Michel C. and Abdollahi-Nasab, Ali and Geng, Xiaolong and Galt, Jerry and Torlapati, Jagadish},
+  journal = {Environmental Science \& Technology},
+  volume = {48},
+  year = {2014},
+  doi = {10.1021/es5012862}
 }
 
 %Github referance
@@ -37,7 +31,7 @@
   author       = {Jonas Kusch},
   title        = {Bay City},
   year         = {2026},
-  url          = {CanvasLink},
+  url          = {https://nmbu.instructure.com/courses/13212/files/2662590?module_item_id=375271},
   urldate      = {2026-01-15},
   note         = {Accessed: 2026-01-15}
 }
