--- a/Report/main.tex
+++ b/Report/main.tex
@@ -267,7 +267,6 @@ the entire computational domain.
 \dirtree{%
 .1 src.
 .2 Geometry.
-.3 geometry.py.
 .3 mesh.py.
 .3 cell.py.
 .3 line.py.
@@ -282,6 +281,43 @@ the entire computational domain.
 .3 tomlParser.py.
 }
 
+The folder structure is split into three packages,
+each with their own functionalities and purposes.
+The Geometry package, as the name suggests, handles
+data relating to the geometry provided. It has classes
+for the various different cell types, and a class for handling
+the mesh data, and by extension, centralizing the data from the
+cell classes.
+\\\\
+The InputOutput package handles data relating to user input and output.
+In this case, the user input is config file(s) in toml format
+and command-line arguments. The user output is a log file. As such,
+this package has one class for each of those functionalities.
+A class to handle logging, a class to read and parse command-line
+arguments, and a class to parse and provide the data of toml files.
+\\\\
+The Simulation is the most central package, and contains classes that handle the data
+relating to the actual simulation. It has a plotter class
+that handles the various aspects of visualization of data,
+including image and video creation. The solver class implements
+all the formulas needed in the simulation, putting the advanced math
+in one place. The simulation class brings those two together,
+handling the overall logic needed to make use of the tools provided
+in the two other classes. The simulation class also brings the other two packages
+together, and thus is the most complex class in our project. Because this
+particular class relies on everything else, writing unit tests that only relied
+on this class's logic was difficult. However, with the other classes having
+their own unit tests, the location of a potential problem can be safely assumed based
+on the overall context.
+\\\\
+The separation of these packages made the program more structured and
+easier to work with. Because of how independent these packages are,
+it also increased testability, as we could quickly write isolated
+tests for almost everything added. The packages aren't entirely independent of course,
+as some utilization of each other is necessary to actually get a simulation.
+We managed to avoid circular dependencies though, and worked hard to make each
+class as independent of other classes as possible, and to keep necessary dependancy
+as linear as possible.
 
 \section{UML-diagram}
 
@@ -289,7 +325,11 @@ the entire computational domain.
     \includegraphics[width=1.2\textwidth]{Figures/UML-diagram-final.png}
     \caption{Final UML diagram}
 \end{figure}
-
+The UML diagram above showcases what was described in the folder structure
+section. Everything is centralized on simulation, no class except for simulation
+is fully dependant on more than one other class. Thus, the flow of the program is
+intuitive to follow, and the project could be built step by step by utilizing
+concepts from the scrum process, further described in the next section.
 
 \chapter{Agile development}
 Agile development is an iterative approach to software creation that emphasizes flexibility and
