--- a/Report/main.tex
+++ b/Report/main.tex
@@ -405,8 +405,62 @@ gave significant help throughout the project, assuring working code before mergi
 
 
 \chapter{Results}
+In this section, we'll cover how the entire process resulted
+in a highly scalable, well structured and optimized package.
+We'll also cover the results of actual simulations running with
+different parameters, and interesting observations made.
+\\\\
+The program is very scalable. The process of adding a new cell type
+is as simple as creating a class for it that inherits Cell, and write
+the function for calculating area. Then add this new class to the types
+dict in CellFactory. That's it, all other math and related data is generalized
+for all convex polygons.
+\\\\
+The structure of the code has made it intuitive to use, where a full simulation
+can be run with just a few lines. We have also worked hard to ensure that data
+handling happens where we felt it made sense. Geometric data handling regarding individual
+cells happens inside the cell class. Geometric data handling related to the mesh as a whole
+happens in Mesh. Simulation data handling happens in Simulation, visualization happens in
+Plotter, and simulation math is handled in Solver. This makes it easy to read, easy to work with,
+and easy to modify.
+\\\\
+We also worked hard to optimize the code, having a single simulation running in less than
+5 seconds on one of our machines. This further improved our ability to rapidly iterate, as there was
+less time spent waiting, and more time spent fixing the things that went wrong.
+\newpage
+All in all, this led to the following results:
+\begin{center}
+  \begin{tabular}{| c | c | c | c |}
+    \hline
+    & Default & Longer & Simple \\
+    \hline
+    \hline
+    nSteps & 500 & 2500 & 500 \\
+    \hline
+    tEnd & 0.5 & 2.5 & 0.5 \\
+    \hline
+    meshName & bay.msh & bay.msh & simple.msh \\
+    \hline
+    borders & [[0.0, 0.45], [0.0, 0.2]] & [[0.0, 0.45], [0.0, 0.2]] & [[0.0, 0.45], [0.0, 0.2]] \\
+    \hline
+    logName & log & log & log \\
+    \hline
+    writeFrequency & 20 & 10 & 20 \\
+    \hline
+    \hline
+    Oil in fishing grounds at end & 19.33 && \\
+    \hline
+    Runtime on Macbook Air M4 &&& \\
+    \hline
+  \end{tabular}
+\end{center}
 
-
+There were some interesting observations in these. The first one is that
+as tEnd gets long enough for the oil to reach the mesh borders, the visualization
+messes up by making the oil suddenly "disappear". This is because the oil density
+in certain cells starts exceeding the limit of the colorbar,
+leading to a sudden change in the color scale. This was fixed by clamping the visualized
+oil density values to the set limit of the colorbar.
 
 % Bibliography
 \blankpage\printbibliography
