--- a/Report/main.tex
+++ b/Report/main.tex
@@ -42,7 +42,9 @@
 Computer simulations are widely used in science and engineering to model complex systems and phenomena. 
 They allow researchers to analyze and predict the behavior of systems under various conditions,
 providing insights that may be difficult or impossible to obtain through traditional experimental methods.
-The problem given of an oil spill has a real world implementation and are of significant for environmental concern. There are multiple examples like the Deepwater Horizon oil spill in 2010 \cite{DeepwaterHorizon}, where computational simulations was crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
+The problem given of an oil spill has a real world implementation and is of significant importance for environmental concern.
+There are multiple examples like the Deepwater Horizon oil spill in 2010 \cite{DeepwaterHorizon}, where computational simulations were
+crucial in order to predict where surface oil would go, aiding skimming, booming, and shoreline protection.
 \\
 \begin{figure}[H]
 \centering
@@ -61,7 +63,7 @@ The problem given of an oil spill has a real world implementation and are of sig
 \end{figure}
 
 Our simulation aims to model oil trajectory and spread forecasting in Bay city.
-Outside Bay city is a fishing ground that are voulnerable to oil spills.
+Outside Bay city is a fishing ground that is voulnerable to oil spills.
 This report will discuss the mathematical models used to represent the oil spill dynamics,
 the numerical methods to solve these models, and the implementation of the simulation.
 \newpage
@@ -95,7 +97,7 @@ The oil density is evaluated at the centerpoint of each cell and stored as the i
 
 \section{Velocity field}
 The vector field defines the direction and magnitude of oil flow at each cell.
-The simplified ocean currents are given by this formula
+The simplified ocean currents are given by this formula:
 \[
 \vec{v}(\vec{x}, t) =
 \begin{pmatrix}
@@ -105,9 +107,9 @@ y - 0.2x \\
 \]
  
 The simulation supports a parameter for time $t$ to account for any development in the ocean currents. 
-This is not used in the current formula, but enables the programs extendebility.
-If the vectorfield is time-independent this drastically increases the effectiveness of precomputated values.
-This assumption is the backbone of the optimized faucet simulation. 
+This is not used in the current formula, but enables the programs extendability.
+If the vector field is time-independent this drastically increases the effectiveness of precomputated values.
+This assumption makes a much faster "faucet-optimized" simulation possible. 
 
 \section{Oil Transfer}
 
@@ -119,7 +121,7 @@ The velocity at each edge is the average of the velocities at its endpoints:
 \vec{v}_{i,\ell}^n = \frac{1}{2} \big( \vec{v}(\vec{x}_i,t^n) + \vec{v}(\vec{x}_{\text{ngh}_\ell},t^n) \big)
 \]
 
-The flux through an edge is defined as
+The flux through an edge is defined as:
 \[
 g(a,b,\vec{\nu},\vec{v}) =
 \begin{cases}
@@ -128,12 +130,12 @@ b \, \langle \vec{v}, \vec{\nu} \rangle, & \text{else}.
 \end{cases}
 \]
 
-The flux contribution from edge $\ell$ is
+The flux contribution from edge $\ell$ is:
 \[
 F_i^{(\text{ngh}_\ell,n)} = -\frac{\Delta t}{A_i} \, g(u_i^n, u_{\text{ngh}_\ell}^n, \vec{\nu}_{i,\ell}, \vec{v}_{i,\ell}^n)
 \]
 
-These edge contributions are first computed and stored. Then the oil density is updated for cell $i$ as
+These edge contributions are first computed and stored. Then the oil density is updated for cell $i$ as:
 \[
 u_i^{n+1} = u_i^n + \sum_{\ell=1}^{3} F_i^{(\text{ngh}_\ell,n)}
 \]
@@ -147,7 +149,7 @@ The mesh connects cells that share an edge as neighbors, storing a reference to 
 Each entry in this dictionary associates a neighbor cell with the corresponding outward-pointing scaled normal vector, 
 which points from the main cell toward that neighbor.
 Given a total simulation time $t_{\text{end}}$ and
-$N$ time steps, the time step size is
+$N$ time steps, the time step size is:
 \[
 \Delta t = \frac{t_{\text{end}}}{N}.
 \]
@@ -158,26 +160,26 @@ If the criteria are not met, it falls back to the standard simulation.
 
 For a time-dependent velocity field $\vec{v}(\vec{x},t)$, the above fluxes are
 recomputed at every time step. At each timestep $t^n = n\Delta t$, fluxes are evaluated for all triangle cells,
-and the change in oil densities are stored in a buffer variable. After all the cells has calculated
+and the change in oil densities are stored in a buffer variable. After all the cells have calculated
 their update value, they add it to their stored oil density
 
 \subsection{Faucet Simulation}
 
 When the velocity field is time-independent, its time derivative vanishes,
-and the velocity at each cell remains constant for all times.
+and the velocity at each cell remains constant for all times:
 \[
 \frac{\partial \vec{v}}{\partial t} = [0,0],
 \]
 This means that all properties associated with a cell
 can be precomputed before the simulation starts using the given formulas.
 
-The flux direction across an edge is determined by
+The flux direction across an edge is determined by:
 \[
-\langle \vec{v}_{I(\mathrm{ngh})}, \vec{\nu}_{I(\mathrm{ngh})} \rangle.
+\langle \vec{v}_{I,\text{ngh}}, \vec{\nu}_{I,\text{ngh}} \rangle
 \]
 
 We only consider flow out of a cell and into its neighbour. 
-The flux direction will align with the velocity if $0<direction$.
+The flux direction will align with the velocity if $direction>0$.
 
 
 For each such outgoing edge, a \emph{faucet} from cell \(I\) to cell
@@ -240,21 +242,25 @@ logName = "input.log" #name of logfile
 writeFrequency = 20   #frequency of output video.
 \end{verbatim}
 
-\section{Running the simulation}
+\section{Command line arguments}
 
-Execute the following command in a terminal to run one specific config file:
+Below is a table of command line arguments, with a description for each:
+\begin{center}
+  \begin{tabular}{| c | c | c |}
+    \hline
+    Arg1 & Arg2 & Desc \\
+    \hline
+    \hline
+    \verb|-f| & \verb|--folder| & Config file location (root if not given) \\
+    \hline
+    \verb|-c| & \verb|--config_file| & Config file name (input.toml if not given) \\
+    \hline
+    \verb|--find_all| & & Uses all configs in target folder \\
+    \hline
+  \end{tabular}
+\end{center}
 
-\begin{verbatim}
-python main.py -f configs .\configs\"Specific config file"
-\end{verbatim}
-
-Execute the following command in a terminal to run multiple config files:
-
-\begin{verbatim}
-python main.py -f configs --find_all
-\end{verbatim}
-
-Running \textbf{\texttt{main.py}} will use \textbf{\texttt{input.toml}} as configuration file.
+Running \textbf{\texttt{main.py}} without arguments will use \textbf{\texttt{input.toml}} in root directory as configuration file.
 
 \section{Simulation output}
 
@@ -349,27 +355,47 @@ as linear as possible.
     \caption{Final UML diagram}
 \end{figure}
 The UML diagram above showcases what was described in the folder structure
-section. Everything is centralized on simulation, no class except for simulation
-is fully dependant on more than one other class. Thus, the flow of the program is
-intuitive to follow, and the project could be built step by step by utilizing
-concepts from the scrum process, further described in the next section.
+section. Everything is centralized on simulation, with no class except for simulation
+being fully dependant on more than one other class. Thus, the entire project could be
+built iteratively with an intuitive flow through scrum concepts described below.
+
+\section{Quality}
+The entire project resulted
+in a highly scalable, well structured and optimized package.
+The process of adding a new cell type
+is as simple as creating a class for it that inherits Cell, and write
+the function for calculating area. Then add this new class to the types
+dict in CellFactory. All other math and related data is generalized
+for all convex polygons.
+\\\\
+The structure of the code has made it intuitive to use, where a full simulation with custom
+parameters can be run with just a few lines of code. We have also worked hard to ensure that data
+handling happens where it makes sense. Geometric data handling regarding individual
+cells happens inside the cell class. Geometric data handling related to the mesh as a whole
+happens in Mesh. Simulation data handling happens in Simulation, visualization happens in
+Plotter, and simulation math is handled in Solver. This makes it easy to read, easy to work with,
+and easy to modify.
+\\\\
+The code is well optimized, with a single simulation running in less than
+5 seconds on one of our machines. This further improved our ability to rapidly iterate, as there was
+less time spent waiting, and more time spent fixing the things that went wrong.
 
 \chapter{Agile development}
 Agile development is an iterative approach to software creation that emphasizes flexibility and
 collaboration. The main idea is breaking a complex problem into smaller parts.  
 Through small, frequent releases of working software, 
-the strategy will produce results that are getting closer and closer to achieve the end goal.
+the strategy will produce results that get gradually closer to the end goal.
 
 \section{Story map and 3rd party software}
-Our approach implementing agile development was firstly to clarify expectations to eachother working in a group.
+Our approach to implement agile development was firstly to clarify expectations to eachother working in a group.
 Secondly, we spent the first days reading and understanding the problem thoroughly. 
 By breaking the problem down to smaller pieces, we got a clear idea about what solutions
 the problem would require. By identifying this, we structured the work by creating a story map.
 \subsection{StoriesOnBoard}
-We used a 3rd party software from https://StoriesOnBoard.com with a 14 days free trail in order to facilitate agile development. 
-We chose StoriesOnBoard because it offerd more features than native github projects, it had a nice layout, user firendly gui, and the ability to integrate with GitHub. 
-Focusing on documentation, organizing the main structre, we achieved a foundtation to start tackeling the problem. 
-Applying timelines and sprints, we also gained an idea to when certian taskes was supposed to be done.
+We used a 3rd party software from https://StoriesOnBoard.com with a 14 days free trial in order to facilitate agile development. 
+We chose StoriesOnBoard because it offered more features than native github projects, had a nice layout, a user friendly GUI, and the ability to integrate with GitHub. 
+Focusing on documentation and organizing the main structure, we achieved a foundation to start tackling the problem. 
+Applying timelines and sprints, we also gained an idea as to when certain tasks were supposed to be done.
 
 \begin{figure}[H]
     \centering
@@ -377,11 +403,11 @@ Applying timelines and sprints, we also gained an idea to when certian taskes wa
     \caption{Story map}
 \end{figure}
 
-Our story map follows a traditional setup with Epics at the top, user stories on the second level  and taskes bellow their respective user story.
+Our story map follows a traditional setup with Epics at the top, user stories on the second level  and tasks below their respective user story.
 The tasks were assigned under a Sprint that was set with a duration of 5 days. 
-The tasks emphasizes detailed decription and checkmarks within the task, rather then a big quantity of tasks in order to have a clear overview in the Story map.
-If a task where missing certain elements, rather then creating new issues or sub issues,
-it gave a better overview to edit description and add checkmarks.
+They emphasize a detailed decription and checkmarks within the task, rather than a big quantity of tasks in order to have a clear overview in the Story map.
+If a task was missing certain elements, rather than creating new issues or sub issues,
+it gave a better overview to edit the description and add checkmarks.
 
 \newpage
 \begin{figure}[H]
@@ -405,10 +431,10 @@ it gave a better overview to edit description and add checkmarks.
 \end{figure}
 
 Looking at some examples of tasks created on StoriesOnBoard, to demonstrate several features with agile development. 
-It has instantanious replication to github issues. The possiblity to stage multiple issues and bulk push them was useful. 
-This enables us to keep an overview and it assured creation of good descriptions and to think through what the issue would required for completion.
-A task could have multiple attriubutes for weights through priority, difficulty and effect. 
-By having this 3rd party software, we where able to systematicly and visualy structre the project through agile development principles.
+It has instantaneous replication of GitHub issues. The possibility to stage multiple issues and bulk push them was useful. 
+This enables us to keep a thorough overview, and it made the creation of good descriptions easier.
+A task could have multiple attributes for weights through priority, difficulty and effect. 
+By having this 3rd party software, we were able to systematically and visually structure the project through agile development principles.
 
 
 \section{github}
@@ -420,11 +446,11 @@ This setup ensures reliability before merging pull requests.
 \begin{figure}[H]
     \centering
     \includegraphics[width=1\textwidth]{Figures/CI.png}
-    \caption{Implementation of contionous integration in github actions}
+    \caption{Implementation of contionuous integration in github actions}
 \end{figure}
 
-As demonstrated, having implemented continous integration early on, 
-gave significant help throughout the project, assuring working code before merging.
+As demonstrated, having implemented continuous integration early on, 
+gave significant help throughout the project, ensuring working code before merging.
 
 \chapter{Results}
 In conclusion, we got the following results with a few select simulations:
@@ -457,7 +483,7 @@ In conclusion, we got the following results with a few select simulations:
 There were some interesting observations about the two last items.
 The default values ran as expected, concluding with oil hitting the
 fishing grounds. If we let it go to $tEnd=2.5$ however, as seen in the
-"Longer Duration" tab, we see the oil density in the fishing grounds actually stabilize.
+"Longer Duration" tab, we see that the oil density in the fishing grounds actually stabilizes.
 For quite some time towards the end, the oil density stayed static at $35.84$, which was also
 visible in the video. This is because as the oil hits the mesh borders, the flow stops, as line cells
 cannot give or receive oil.
@@ -465,26 +491,8 @@ cannot give or receive oil.
 The results of the "Fewer steps" simulation were also interesting. The oil density rapidly grew
 accross the entire plot, leaving almost the entire plot completely covered in oil by the end.
 This is because the $dt$ variable grows so large that the oilDensity increases beyond what is reasonable.
-\\\\
-The entire project resulted
-in a highly scalable, well structured and optimized package.
-The process of adding a new cell type
-is as simple as creating a class for it that inherits Cell, and write
-the function for calculating area. Then add this new class to the types
-dict in CellFactory. All other math and related data is generalized
-for all convex polygons.
-\\\\
-The structure of the code has made it intuitive to use, where a full simulation with custom
-parameters can be run with just a few lines of code. We have also worked hard to ensure that data
-handling happens where it makes sense. Geometric data handling regarding individual
-cells happens inside the cell class. Geometric data handling related to the mesh as a whole
-happens in Mesh. Simulation data handling happens in Simulation, visualization happens in
-Plotter, and simulation math is handled in Solver. This makes it easy to read, easy to work with,
-and easy to modify.
-\\\\
-We also worked hard to optimize the code, having a single simulation running in less than
-5 seconds on one of our machines. This further improved our ability to rapidly iterate, as there was
-less time spent waiting, and more time spent fixing the things that went wrong.
+
+
 
 % Bibliography
 \blankpage\printbibliography
