--- a/Report/main.tex
+++ b/Report/main.tex
@@ -389,7 +389,9 @@ and summing up the triangle areas.
 \\\\
 In the Simulation package we could improve the visualization, as currently the color of
 cells in the fishing grounds stays cyan regardless of how much oil enters. This can make it difficult
-to spot whether oil actually enters under certain conditions.
+to spot whether oil actually enters under certain conditions. In addition to these notes,
+there is always more to improve, and bugs or flaws we didn't catch. Overall the project follows
+the parameters for success defined by the task description.
 
 \chapter{Agile development}
 Agile development is an iterative approach to software creation that emphasizes flexibility and
