Added coverage figure and info

--- a/Report/main.tex
+++ b/Report/main.tex
@@ -452,8 +452,9 @@ By having this 3rd party software, we were able to systematically and visually s
 
 \section{github}
 
-Implementing continuous integration (CI) with GitHub Actions and tox streamlined the project testing across multiple environments. On every pull request the
-GitHub workflow ran our test units using pytest. In total we got well over 90\% coverage.
+Implementing continuous integration (CI) by using tox with GitHub Actions streamlined the project testing across multiple environments. On every pull request the
+GitHub workflow ran our test units using pytest. During the project, we worked to keep coverage above 90\%
+in order to catch mistakes early. The final project got well over 90\% coverage as seen in Figure 5.4.
 The benefits with continuous integration is all about catching regressions early through automated linting, unit tests, and cross-version compatibility checks. 
 This setup ensures reliability before merging pull requests. 
 
